--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,12 +22,14 @@ jobs:
     steps:
     - run: git config --global core.autocrlf false
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - uses: pnpm/action-setup@v2
       with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install pnpm
-      run:  npm install -g pnpm@8.6.5
+        version: 8.6.5
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+        cache: 'pnpm'
+
     - name: Install dependencies
       run:  pnpm install --frozen-lockfile
     - run: pnpm build
