--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,4 +4,4 @@
 # CODEOWNERS prevent automerge of Renovate
 # Following files should be owned by everyone
 **/*/package.json
-**/*/pnpm-lock.yml
+**/*/pnpm-lock.yaml
