build: migrate to pnpm (#393)
Co-authored-by: tasshi / Masaharu TASHIRO <33759872+mshrtsr@users.noreply.github.com>

--- a/license-finder-decisions.yml
+++ b/license-finder-decisions.yml
@@ -125,3 +125,9 @@
     :why: Because we will not redistribute this package.
     :versions: []
     :when: 2023-03-28 03:51:22.738300000 Z
+- - :approve
+  - pause-stream
+  - :who:
+    :why: Because we will not redistribute this package.
+    :versions: []
+    :when: 2023-07-13 06:17:46.739770000 Z
