--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   },
   "types": "lib/index.d.ts",
   "scripts": {
-    "start": "yarn build --watch",
-    "prebuild": "yarn clean",
-    "build": "ncc build ./src/cli/main.ts -m",
-    "postbuild": "yarn pkg",
+    "preinstall": "npx only-allow pnpm",
+    "start": "run-s clean 'build:ts --watch'",
+    "build": "run-s clean build:ts package",
+    "build:ts": "ncc build ./src/cli/main.ts -m",
     "build:artifacts": "run-s build licensed compress",
-    "pkg": "pkg ./dist/index.js --compress Brotli -o bin/cli-kintone -t linux,macos,win",
+    "package": "pkg ./dist/index.js --compress Brotli -o bin/cli-kintone -t linux,macos,win",
     "licensed": "zx ./scripts/generate-license-notice.mjs",
     "compress": "zx ./scripts/compress-to-zip-file.mjs",
     "typecheck": "tsc --pretty --noEmit",
