--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -19,8 +19,16 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Install Node modules
-        run: yarn install --frozen-lockfile
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.5
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: Check licenses
         run: license_finder --decisions-file=license-finder-decisions.yml
@@ -31,17 +39,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # setup ruby environment before running jonabc/setup-licensed
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ruby
+
       - name: Setup Licensed
         uses: jonabc/setup-licensed@d6b3a6f7058c2b40c06d205e13e15c2418977566 # renovate: tag=v1.1.4
         with:
-          version: '3.x'
+          version: '4.x'
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Install Node modules
-        run: yarn install --frozen-lockfile
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+
+      - name: Install pnpm
+        run:  npm install -g pnpm@8.6.5
+
+      - name: Install dependencies
+        run:  pnpm install --frozen-lockfile
 
       - name: Check licenses
         run: |
