--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,11 +14,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js 16.x
-      uses: actions/setup-node@v3
+    - uses: pnpm/action-setup@v2
       with:
-        node-version: 16.x
-        cache: yarn
-    - run:  yarn install --frozen-lockfile
-    - run:  yarn build
-    - run:  yarn lint
+        version: 8.6.5
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+        cache: 'pnpm'
+
+    - name: Install dependencies
+      run:  pnpm install --frozen-lockfile
+    - run:  pnpm build
+    - run:  pnpm lint
