--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,13 +48,17 @@ jobs:
           version: '3.x'
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v3
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v2
         with:
-          node-version: 16.x
-          cache: yarn
-      - run: yarn install --frozen-lockfile
-      - run: yarn build:artifacts
+          version: 8.6.5
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run:  pnpm install --frozen-lockfile
+      - run: pnpm build:artifacts
       - name: Upload executables
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
