--- a/.github/workflows/yamory.yml
+++ b/.github/workflows/yamory.yml
@@ -11,21 +11,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v2
         with:
-          node-version: 16.x
-          cache: yarn
+          version: 8.6.5
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+          cache: 'pnpm'
+
       - name: download and validate Yamory script
         working-directory: /tmp
         run: |
-          curl -sSf -L -o ./yamory-yarn.sh https://localscanner.yamory.io/script/yarn
-          curl -sSf -L -o ./yamory-yarn-sha512sum.txt \
-            https://cli.yamory.io/yamory-app-library-scan-scripts/yamory-yarn-sha512sum.txt
-          sha512sum --check yamory-yarn-sha512sum.txt
-          chmod +x ./yamory-yarn.sh
+          curl -sSf -L -o ./yamory-pnpm.sh https://localscanner.yamory.io/script/pnpm
+          curl -sSf -L -o ./yamory-pnpm-sha512sum.txt \
+            https://cli.yamory.io/yamory-app-library-scan-scripts/yamory-pnpm-sha512sum.txt
+          sha512sum --check yamory-pnpm-sha512sum.txt
+          chmod +x ./yamory-pnpm.sh
       - name: run Yamory
-        run: /tmp/yamory-yarn.sh
+        run: /tmp/yamory-pnpm.sh
         env:
           CI: true
           PROJECT_GROUP_KEY: cli-kintone
