--- a/.licensed.yml
+++ b/.licensed.yml
@@ -4,7 +4,7 @@ name: 'cli-kintone'
 
 # Sources of metadata
 sources:
-  npm: true
+  pnpm: true
 
 # Dependencies with these licenses are allowed and will not raise errors or warnings.
 # This list does not have a default value and is required for `licensed status`
@@ -34,13 +34,12 @@ allowed:
 # non-allowed license.  Dependencies on this list will still raise errors if
 # license text cannot be found for the dependency.
 reviewed:
-  npm:
-    - color-convert # MIT
-    - bl # MIT
-    - wcwidth # MIT
-    - type-fest # MIT OR CC0-1.0
-    - string_decoder # MIT
-    - string_decoder # MIT
-    - readable-stream # MIT
-    - lodash # MIT
-    - ieee754 # BSD-3-Clause
+  pnpm:
+    - color-convert@>=2.0.1 # MIT
+    - bl@>=4.1.0 # MIT
+    - wcwidth@>=1.0.1 # MIT
+    - type-fest@>=0.21.3 # MIT OR CC0-1.0
+    - string_decoder@>=1.3.0 # MIT
+    - readable-stream@>=3.6.0 # MIT
+    - lodash@>=4.17.21 # MIT
+    - ieee754@>=1.2.1 # BSD-3-Clause
