--- a/.github/workflows/yamory.yml
+++ b/.github/workflows/yamory.yml
@@ -17,7 +17,11 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-          cache: 'pnpm'
+      - name: Set up pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
 
       - name: download and validate Yamory script
         working-directory: /tmp
