--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8.6.5
+
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
@@ -57,6 +58,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
+
+      - name: Set up pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
 
       - name: Install pnpm
         run:  npm install -g pnpm@8.6.5
