--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,14 +47,22 @@ jobs:
         with:
           version: '3.x'
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: actions/checkout@v3
+
       - uses: pnpm/action-setup@v2
         with:
           version: 8.6.5
+
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-          cache: 'pnpm'
+
+      - name: Set up pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
 
       - name: Install dependencies
         run:  pnpm install --frozen-lockfile
