--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,13 +22,20 @@ jobs:
     steps:
     - run: git config --global core.autocrlf false
     - uses: actions/checkout@v3
+
     - uses: pnpm/action-setup@v2
       with:
         version: 8.6.5
+
     - uses: actions/setup-node@v3
       with:
         node-version: '16'
-        cache: 'pnpm'
+
+    - name: Set up pnpm cache
+      uses: actions/cache@v3
+      with:
+        path: ~/.pnpm-store
+        key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
 
     - name: Install dependencies
       run:  pnpm install --frozen-lockfile
