--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/yargs": "^17.0.24",
     "@vercel/ncc": "^0.36.1",
     "babel-jest": "^29.6.1",
+    "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
