build: fix review

--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -65,8 +65,9 @@ jobs:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
 
-      - name: Install pnpm
-        run:  npm install -g pnpm@8.6.5
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.5
 
       - name: Install dependencies
         run:  pnpm install --frozen-lockfile
