--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -58,12 +58,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-
-      - name: Set up pnpm cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          cache: 'pnpm'
 
       - uses: pnpm/action-setup@v2
         with:
