--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,12 +30,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: '16'
-
-    - name: Set up pnpm cache
-      uses: actions/cache@v3
-      with:
-        path: ~/.pnpm-store
-        key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+        cache: 'pnpm'
 
     - name: Install dependencies
       run:  pnpm install --frozen-lockfile
