chore: apply prettier for yml files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - 'renovate/**'
+      - "renovate/**"
   pull_request:
 
 jobs:
@@ -18,7 +18,7 @@ jobs:
 
       - uses: jonabc/setup-licensed@d6b3a6f7058c2b40c06d205e13e15c2418977566 # renovate: tag=v1.1.4
         with:
-          version: '4.x'
+          version: "4.x"
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/checkout@v3
@@ -29,11 +29,11 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: '16'
-          cache: 'pnpm'
+          node-version: "16"
+          cache: "pnpm"
 
       - name: Install dependencies
-        run:  pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
       - run: pnpm build:artifacts
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
