--- a/.github/workflows/yamory.yml
+++ b/.github/workflows/yamory.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: "16"
 
       - name: download and validate Yamory script
         working-directory: /tmp
