--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,14 @@
-
 name: test
 
 on:
   push:
     branches:
       - main
-      - 'renovate/**'
+      - "renovate/**"
   pull_request:
 
 jobs:
   test:
-
     name: Node.js ${{ matrix.os }} ${{ matrix.node-version }}
     runs-on: ${{ matrix.os }}
 
@@ -20,19 +18,19 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-    - run: git config --global core.autocrlf false
-    - uses: actions/checkout@v3
+      - run: git config --global core.autocrlf false
+      - uses: actions/checkout@v3
 
-    - uses: pnpm/action-setup@v2
-      with:
-        version: 8.6.5
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.5
 
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-        cache: 'pnpm'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+          cache: "pnpm"
 
-    - name: Install dependencies
-      run:  pnpm install --frozen-lockfile
-    - run: pnpm build
-    - run: pnpm test:ci
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+      - run: pnpm build
+      - run: pnpm test:ci
