refactor: refactor lint and fix script

--- a/package.json
+++ b/package.json
@@ -28,12 +28,10 @@
     "test:e2e": "cucumber-js",
     "lint": "run-p -l lint:*",
     "lint:eslint": "eslint --ext .js,.mjs,.cjs,.ts,.mts,.cts ./",
-    "lint:md": "prettier --check ./**/*.md",
-    "lint:yml": "prettier --check ./**/*.yml",
+    "lint:prettier": "prettier --check '**/*.{json,md,yml,yaml}'",
     "fix": "run-p fix:*",
     "fix:lint": "run-s 'lint:eslint --fix'",
-    "fix:md": "run-s 'lint:md --write'",
-    "fix:yml": "run-s 'lint:yml --write'",
+    "fix:prettier": "run-s 'lint:prettier --write'",
     "clean": "rimraf lib bin artifacts dist"
   },
   "repository": {
