--- a/.prettierignore
+++ b/.prettierignore
@@ -7,5 +7,9 @@ coverage
 # Ignore all HTML files:
 *.html
 
-# Ignore CHANGELOG.md (because it is auto generated)
+# Ignore tsconfig file
+tsconfig.json
+
+# Ignore auto generated files
+pnpm-lock.yaml
 CHANGELOG.md
