--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "pkg": "^5.8.1",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
+    "std-mocks": "^1.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "zx": "^7.2.3"
@@ -86,6 +87,7 @@
     "https-proxy-agent": "^7.0.2",
     "iconv-lite": "^0.6.3",
     "inquirer": "^8.2.6",
+    "winston": "^3.10.0",
     "yargs": "^17.7.2"
   },
   "packageManager": "pnpm@8.6.12"
