--- a/.licensed.yml
+++ b/.licensed.yml
@@ -35,7 +35,7 @@ allowed:
 # license text cannot be found for the dependency.
 reviewed:
   pnpm:
-    - color-convert@>=2.0.1 # MIT
+    - color-convert@>=1.9.3 # MIT
     - bl@>=4.1.0 # MIT
     - wcwidth@>=1.0.1 # MIT
     - type-fest@>=0.21.3 # MIT OR CC0-1.0
@@ -43,3 +43,4 @@ reviewed:
     - readable-stream@>=3.6.0 # MIT
     - lodash@>=4.17.21 # MIT
     - ieee754@>=1.2.1 # BSD-3-Clause
+    - \@colors/colors@>=1.5.0 # MIT
