--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/inquirer": "^8.2.6",
     "@types/jest": "^29.5.4",
     "@types/node": "^18.17.15",
+    "@types/std-mocks": "^1.0.1",
     "@types/rollup-plugin-auto-external": "^2.0.2",
     "@types/yargs": "^17.0.24",
     "@vercel/ncc": "^0.36.1",
@@ -74,7 +75,6 @@
     "pkg": "^5.8.1",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
-    "std-mocks": "^1.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "zx": "^7.2.3"
