ci: fix env to vars

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -40,8 +40,8 @@ jobs:
           TEST_KINTONE_API_TOKEN_FOR_IMPORT: ${{ secrets. TEST_KINTONE_API_TOKEN_FOR_IMPORT }}
           TEST_KINTONE_API_TOKEN_FOR_IMPORT_DELETE: ${{ secrets. TEST_KINTONE_API_TOKEN_FOR_IMPORT_DELETE }}
           TEST_KINTONE_API_TOKEN_FOR_DELETE: ${{ secrets. TEST_KINTONE_API_TOKEN_FOR_DELETE }}
-          TEST_KINTONE_APP_ID_GUEST_SPACE: ${{ env.TEST_KINTONE_APP_ID_GUEST_SPACE }}
-          TEST_KINTONE_APP_ID_FOR_EXPORT: ${{ env.TEST_KINTONE_APP_ID_FOR_EXPORT }}
-          TEST_KINTONE_APP_ID_FOR_IMPORT: ${{ env.TEST_KINTONE_APP_ID_FOR_IMPORT }}
-          TEST_KINTONE_APP_ID_FOR_DELETE: ${{ env.TEST_KINTONE_APP_ID_FOR_DELETE }}
+          TEST_KINTONE_APP_ID_GUEST_SPACE: ${{ vars.TEST_KINTONE_APP_ID_GUEST_SPACE }}
+          TEST_KINTONE_APP_ID_FOR_EXPORT: ${{ vars.TEST_KINTONE_APP_ID_FOR_EXPORT }}
+          TEST_KINTONE_APP_ID_FOR_IMPORT: ${{ vars.TEST_KINTONE_APP_ID_FOR_IMPORT }}
+          TEST_KINTONE_APP_ID_FOR_DELETE: ${{ vars.TEST_KINTONE_APP_ID_FOR_DELETE }}
         run: pnpm test:e2e
