ci: refactor code

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -6,16 +6,17 @@ on:
       - main
   pull_request:
 
+concurrency:
+  group: test-e2e-workflow-concurrency-group
+  cancel-in-progress: false
+
 jobs:
   test-e2e:
-    concurrency:
-      group: test-e2e-jobs-concurrency-group
-      cancel-in-progress: false
-
     name: Node.js ${{ matrix.os }} ${{ matrix.node-version }}
     runs-on: ${{ matrix.os }}
 
     strategy:
+      max-parallel: 1
       matrix:
         node-version: [18.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
