ci: add conditional in setup node

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: pnpm/action-setup@v2
 
       - uses: actions/setup-node@v3
+        if: github.event_name == 'push' || matrix.os == 'ubuntu-latest'
         with:
           node-version: ${{ matrix.node-version }}
           cache: "pnpm"
