ci: update correct syntax

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           if [ "${{ github.event_name }}" == "push" ]; then
             echo ::set-output name=os::[ubuntu-latest, windows-latest, macos-latest]
-          else if [ "${{ github.event_name }}" == "pull_request" ]; then
+          elif [ "${{ github.event_name }}" == "pull_request" ]; then
             echo ::set-output name=os::[ubuntu-latest]
           fi
 
