--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -20,9 +20,9 @@ jobs:
       - id: get-os
         run: |
           if [ "${{ github.event_name }}" == "push" ]; then
-            echo "os={[\"ubuntu-latest\",\"windows-latest\",\"macos-latest\"]}" >> $GITHUB_OUTPUT
+            echo "os=[\"ubuntu-latest\",\"windows-latest\",\"macos-latest\"]" >> $GITHUB_OUTPUT
           elif [ "${{ github.event_name }}" == "pull_request" ]; then
-            echo "os={[\"ubuntu-latest\"]}" >> $GITHUB_OUTPUT
+            echo "os=[\"ubuntu-latest\"]" >> $GITHUB_OUTPUT
           fi
 
   test-e2e:
@@ -34,7 +34,7 @@ jobs:
       max-parallel: 1
       matrix:
         node-version: [18.x]
-        os: ${{ needs.get-running-os.outputs.os }}
+        os: ${{ fromJSON(needs.get-running-os.outputs.os) }}
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v2
