--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -22,7 +22,7 @@ jobs:
           if [ "${{ github.event_name }}" == "push" ]; then
             echo "os=['ubuntu-latest','windows-latest','macos-latest']" >> $GITHUB_OUTPUT
           elif [ "${{ github.event_name }}" == "pull_request" ]; then
-            echo "os=['ubuntu-latest','windows-latest','macos-latest']" >> $GITHUB_OUTPUT
+            echo "os=['ubuntu-latest']" >> $GITHUB_OUTPUT
           fi
 
   test-e2e:
