--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       tag_name: ${{ steps.release.outputs.tag_name }}
     runs-on: ubuntu-latest
     steps:
-      - uses: cybozu/octoken-action@v1
+      - uses: actions/create-github-app-token@v1
         id: create-iat
         with:
           github_app_id: ${{ secrets.RELEASE_GITHUB_APP_ID}}
