test: update secrets in Github actions

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -53,6 +53,7 @@ jobs:
           TEST_KINTONE_API_TOKEN_FOR_EXPORT: ${{ secrets.TEST_KINTONE_API_TOKEN_FOR_EXPORT }}
           TEST_KINTONE_API_TOKEN_FOR_EXPORT_DELETE: ${{ secrets.TEST_KINTONE_API_TOKEN_FOR_EXPORT_DELETE }}
           TEST_KINTONE_API_TOKEN_FOR_IMPORT: ${{ secrets.TEST_KINTONE_API_TOKEN_FOR_IMPORT }}
+          TEST_KINTONE_API_TOKEN_1_FOR_IMPORT: ${{ secrets.TEST_KINTONE_API_TOKEN_1_FOR_IMPORT }}
           TEST_KINTONE_API_TOKEN_FOR_IMPORT_DELETE: ${{ secrets.TEST_KINTONE_API_TOKEN_FOR_IMPORT_DELETE }}
           TEST_KINTONE_API_TOKEN_FOR_DELETE: ${{ secrets.TEST_KINTONE_API_TOKEN_FOR_DELETE }}
           TEST_KINTONE_DRAFT_API_TOKEN_FOR_IMPORT: ${{ secrets.TEST_KINTONE_DRAFT_API_TOKEN_FOR_IMPORT }}
