--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -35,6 +35,12 @@ jobs:
       matrix:
         node-version: [18.x]
         os: ${{ fromJSON(needs.get-running-os.outputs.os) }}
+    env:
+      TEST_KINTONE_BASE_URL: ${{ secrets.TEST_KINTONE_BASE_URL }}
+      TEST_KINTONE_USERNAME: ${{ secrets.TEST_KINTONE_USERNAME }}
+      TEST_KINTONE_PASSWORD: ${{ secrets.TEST_KINTONE_PASSWORD }}
+      TEST_KINTONE_CREDENTIAL_MANAGEMENT_APP_ID: ${{ secrets.TEST_KINTONE_CREDENTIAL_MANAGEMENT_APP_ID }}
+      TEST_KINTONE_CREDENTIAL_MANAGEMENT_API_TOKEN: ${{ secrets.TEST_KINTONE_CREDENTIAL_MANAGEMENT_API_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v2
@@ -45,18 +51,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - run: pnpm build
+      - name: Mask credentials
+        run: |
+          credentials=($(node features/scripts/fetch-credentials.mjs))
+          for credential in "${credentials[@]}"; do
+            echo "::add-mask::$credential"
+          done
       - name: Run e2e tests
-        env:
-          TEST_KINTONE_BASE_URL: ${{ secrets.TEST_KINTONE_BASE_URL }}
-          TEST_KINTONE_USERNAME: ${{ secrets.TEST_KINTONE_USERNAME }}
-          TEST_KINTONE_PASSWORD: ${{ secrets.TEST_KINTONE_PASSWORD }}
-          TEST_KINTONE_API_TOKEN_FOR_EXPORT: ${{ secrets.TEST_KINTONE_API_TOKEN_FOR_EXPORT }}
-          TEST_KINTONE_API_TOKEN_FOR_EXPORT_DELETE: ${{ secrets.TEST_KINTONE_API_TOKEN_FOR_EXPORT_DELETE }}
-          TEST_KINTONE_API_TOKEN_FOR_IMPORT: ${{ secrets.TEST_KINTONE_API_TOKEN_FOR_IMPORT }}
-          TEST_KINTONE_API_TOKEN_FOR_IMPORT_DELETE: ${{ secrets.TEST_KINTONE_API_TOKEN_FOR_IMPORT_DELETE }}
-          TEST_KINTONE_API_TOKEN_FOR_DELETE: ${{ secrets.TEST_KINTONE_API_TOKEN_FOR_DELETE }}
-          TEST_KINTONE_APP_ID_GUEST_SPACE: ${{ vars.TEST_KINTONE_APP_ID_GUEST_SPACE }}
-          TEST_KINTONE_APP_ID_FOR_EXPORT: ${{ vars.TEST_KINTONE_APP_ID_FOR_EXPORT }}
-          TEST_KINTONE_APP_ID_FOR_IMPORT: ${{ vars.TEST_KINTONE_APP_ID_FOR_IMPORT }}
-          TEST_KINTONE_APP_ID_FOR_DELETE: ${{ vars.TEST_KINTONE_APP_ID_FOR_DELETE }}
         run: pnpm test:e2e
