--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "zx": "^7.2.3"
+    "zx": "^7.2.3",
+    "ajv": "^8.12.0"
   },
   "dependencies": {
     "@kintone/rest-api-client": "^5.0.3",
