--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@actions/core": "^1.10.1",
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
