--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@actions/core": "^1.10.1",
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
@@ -76,7 +77,8 @@
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "zx": "^7.2.3"
+    "zx": "^7.2.3",
+    "ajv": "^8.12.0"
   },
   "dependencies": {
     "@kintone/rest-api-client": "^5.0.3",
