--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -54,4 +54,6 @@ jobs:
           TEST_KINTONE_CREDENTIAL_MANAGEMENT_API_TOKEN: ${{ secrets.TEST_KINTONE_CREDENTIAL_MANAGEMENT_API_TOKEN }}
           TEST_KINTONE_USERNAME_UNPRIVILEGED: ${{ secrets.TEST_KINTONE_USERNAME_UNPRIVILEGED }}
           TEST_KINTONE_PASSWORD_UNPRIVILEGED: ${{ secrets.TEST_KINTONE_PASSWORD_UNPRIVILEGED }}
+          TEST_KINTONE_USERNAME_ADD_PERMISSION: ${{ secrets.TEST_KINTONE_USERNAME_ADD_PERMISSION }}
+          TEST_KINTONE_PASSWORD_ADD_PERMISSION: ${{ secrets.TEST_KINTONE_PASSWORD_ADD_PERMISSION }}
         run: pnpm test:e2e
